compiler/src/test/resources/amyc/nameAnalyzer/failing/LocalScope.amy
object LocalScope
  fn foo(): Int(32) = {
    val i: Int(32) = i;
    i
  }
end LocalScope
